--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <form action="">
                 <div class="form-group">
                     <label for="user">Usuario</label>
-                    <input type="text" id="user">
+                    <input type="text" id="user" class="form-control">
                 </div>
                 <div class="form-group">
                  <label for="pass">Contraseña</label>
@@ -22,6 +22,9 @@
                 </div>
                 <input type="submit" value="Ingresar" class="btn btn-success btn-block">
             </form>
+            <div id="link" class="mt-2">
+                <a href="./registro.html">Ir a registro</a>
+            </div>
         </div>
     </div>
 </body>
