--- a/registro.html
+++ b/registro.html
@@ -14,10 +14,10 @@
             <form id="formRegistro">
                 <div class="form-group">
                     <label for="name">Nombre Completo</label>
-                    <input type="text" id="user" class="form-control">
+                    <input type="text" id="name" class="form-control">
                 </div>
                 <div class="form-group">
-                    <label for="user">Correo</label>
+                    <label for="email">Correo</label>
                     <input type="email" id="email" class="form-control">
                 </div>
                 <div class="form-group">
